fix page scroll  on mobile

--- a/index.css
+++ b/index.css
@@ -14,6 +14,11 @@ body {
     color: var(--white);
     font-family: sans-serif;
     position: relative;
+    
+    overflow: scroll;
+    padding-bottom: 4rem;
+}
+#bg {
     background-image: url(images/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -24,10 +29,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: scroll;
-    padding-bottom: 4rem;
+    z-index: -2;
 }
-
 /* Header Section */
 
 header {
